[gd_scene load_steps=14 format=2]

[ext_resource path="res://main/Main.gd" type="Script" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://gem/Gem.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/background/fondito.png" type="Texture" id=6]
[ext_resource path="res://static/sounds/ottoserge.mp3" type="AudioStream" id=7]
[ext_resource path="res://static/sounds/llegando2.tres" type="AudioStream" id=8]
[ext_resource path="res://main/Saludos.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Gem = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 680.0
margin_bottom = 520.0
texture = ExtResource( 6 )

[node name="HUD" type="Control" parent="."]
margin_right = 680.0
margin_bottom = 520.0
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
margin_right = 680.0
margin_bottom = 40.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="LabelScore" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 670.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="LabelTimer" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 670.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="MarginContainer2" type="MarginContainer" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -39.0
margin_right = 26.0
margin_bottom = 39.0

[node name="LabelLevel" type="Label" parent="HUD/MarginContainer2"]
margin_right = 52.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="GameOverLabel" type="Label" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -24.0
margin_right = 140.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "Game Over!"

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 183 )

[node name="GemContainer" type="Node2D" parent="."]

[node name="CherryContainer" type="Node2D" parent="."]

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="CherryTimer" type="Timer" parent="."]

[node name="Saludos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
script = ExtResource( 9 )

[node name="BackMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 3.714
autoplay = true

[connection signal="picked" from="Player" to="." method="_on_Player_picked"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="CherryTimer" to="." method="_on_CherryTimer_timeout"]
